<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/gradientbackground">
        <include
            android:id="@+id/toolbar_layout"
            layout="@layout/layout_toolbar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp">
            <TextView
                android:id="@+id/textView_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="120dp"
                android:textSize="30sp"
                android:fontFamily="sans-serif-smallcaps"
                android:textColor="@color/white"
                android:text="@string/forgot_password"/>

            <LinearLayout
                android:layout_below="@+id/textView_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/textView_username"
                android:layout_marginTop="20dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_name"
                    android:textAllCaps="true"
                    android:fontFamily="sans-serif"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:layout_marginTop="5dp"/>
                <EditText
                    android:id="@+id/userName"
                    android:background="@drawable/edittext_style"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="5dp"
                    android:singleLine="true"
                    android:fontFamily="sans-serif"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:textSize="15sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_below="@+id/textView_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/textView_password">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/new_password"
                    android:textAllCaps="true"
                    android:fontFamily="sans-serif"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:layout_marginTop="20dp"/>

                <EditText
                    android:id="@+id/new_password"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/edittext_style"
                    android:fontFamily="sans-serif"
                    android:inputType="textPassword"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:singleLine="true"
                    android:textSize="15sp" />
            </LinearLayout>
            <Button
                android:id="@+id/button_changepassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView_password"
                android:layout_marginTop="50dp"
                android:onClick="changePassword"
                android:text="@string/change_password"
                android:background="@drawable/buttonstyle"
                android:paddingLeft="70dp"
                android:paddingRight="70dp"
                android:layout_centerHorizontal="true"
                android:textColor="@color/white"
                android:textSize="16sp"/>
        </RelativeLayout>
 </RelativeLayout>
