<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraintlayout">
    <ScrollView
        android:id="@+id/ScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        android:fillViewport="true"
        android:background="@drawable/gradientbackground">
       <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
           android:id="@+id/layout_register">
           <TextView
               android:id="@+id/textView_register"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginTop="64dp"
               android:textSize="30sp"
               android:fontFamily="sans-serif-smallcaps"
               android:textColor="@color/white"
               android:text="Register Yourself"/>

           <de.hdodenhof.circleimageview.CircleImageView
                android:layout_marginTop="22dp"
                android:id="@+id/profile_picture"
                android:layout_width="220dp"
                android:layout_height="220dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"/>
            <TextView
                android:id="@+id/textView_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif"
                android:text="@string/name"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/edittext_style"
                android:inputType="textPersonName"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:selectAllOnFocus="true"
                android:singleLine="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/password"
                android:id="@+id/textView_password"
                android:textAllCaps="true"
                android:fontFamily="sans-serif"
                android:textColor="@color/white"
                android:textSize="15sp"/>
            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/edittext_style"
                android:inputType="textPersonName"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:singleLine="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/confirm_password"
                android:id="@+id/textView_"
                android:textAllCaps="true"
                android:fontFamily="sans-serif"
                android:textColor="@color/white"
                android:textSize="15sp"/>
            <EditText
                android:id="@+id/confirmpassword"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/edittext_style"
                android:inputType="textPersonName"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:singleLine="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/designation"
                android:id="@+id/textView_designation"
                android:textAllCaps="true"
                android:fontFamily="sans-serif"
                android:textColor="@color/white"
                android:textSize="15sp"/>
            <EditText
                android:id="@+id/designation"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/edittext_style"
                android:inputType="textPersonName"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:singleLine="true" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/mobile_number"
                android:id="@+id/textView_mobileNumber"
                android:textAllCaps="true"
                android:fontFamily="sans-serif"
                android:textColor="@color/white"
                android:textSize="15sp"/>
            <EditText
                android:id="@+id/mobile_number"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/edittext_style"
                android:inputType="number"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:singleLine="true" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/email_id"
                android:id="@+id/textView_emailId"
                android:textAllCaps="true"
                android:fontFamily="sans-serif"
                android:textColor="@color/white"
                android:textSize="15sp"/>
            <EditText
                android:id="@+id/email_id"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/edittext_style"
                android:inputType="textEmailAddress"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:singleLine="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/age"
                android:id="@+id/textView_age"
                android:textAllCaps="true"
                android:fontFamily="sans-serif"
                android:textColor="@color/white"
                android:textSize="15sp"/>
            <EditText
                android:id="@+id/age"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/edittext_style"
                android:inputType="number"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:singleLine="true" />

            <!--<TextView-->
            <!--android:id="@+id/textView_gender"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="25dp"-->
            <!--android:fontFamily="sans-serif"-->
            <!--android:text="@string/gender"-->
            <!--android:textAllCaps="true"-->
            <!--android:textColor="@color/white"-->
            <!--android:textSize="15sp" />-->

            <!--<TextView-->
            <!--android:id="@+id/textView_male"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="25dp"-->
            <!--android:layout_marginStart="28dp"-->
            <!--android:fontFamily="sans-serif"-->
            <!--android:text="Male"-->
            <!--android:textAllCaps="true"-->
            <!--android:textColor="@color/white"-->
            <!--android:textSize="15sp" />-->
            <!--<RadioGroup-->
            <!--android:layout_width="fill_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:id="@+id/radiogroup">-->
            <!--<RadioButton-->
            <!--android:id="@+id/radiobutton_male"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginStart="28dp"-->
            <!--android:layout_weight="1" />-->
            <!--<TextView-->
            <!--android:id="@+id/textView_female"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="25dp"-->
            <!--android:layout_weight="1"-->
            <!--android:fontFamily="sans-serif"-->
            <!--android:text="Female"-->
            <!--android:textAllCaps="true"-->
            <!--android:textColor="@color/white"-->
            <!--android:textSize="15sp" />-->

            <!--<RadioButton-->
            <!--android:id="@+id/radiobutton_female"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginStart="37dp" />-->

            <!--</RadioGroup>-->
            <Button
                android:layout_marginTop="40dp"
                android:id="@+id/button_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/buttonstyle"
                android:paddingLeft="70dp"
                android:paddingRight="70dp"
                android:layout_marginBottom="20dp"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>